syntax = "proto3";
package txsvc;
option go_package = "kwil/x/proto/txpb";

import "kwil/common/database.proto";

message GetSchemaRequest {
	string owner = 1;
	string database = 2;
}

message GetSchemaResponse {
	common.Database database = 1;
}